--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,14 @@ h3 {
 
 h1 {
 	padding: 20px;
-	border-bottom: 3px solid gray; 
+	border-bottom: 3px solid #1e212d; 
+	margin: 2px;
+}
+
+hr {
+	height: 2px;
+	background: #1e212d;
+	margin: 0;
 }
 
 .wrapper {
@@ -60,8 +67,6 @@ h1 {
 	display: flex;
 	justify-content: center;
 	width: 100%;
-	border-top: 2px solid gray;
-	margin-top: -20px;
 	padding-top: 15px;
 }
 
