--- a/css/style.css
+++ b/css/style.css
@@ -29,20 +29,23 @@ hr {
 }
 
 .container {
-	display: flex;
-	padding-top: 2%;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr); 
+	padding-top: 2%; 
 	font-size: 20px;
+	width: 90%;
+	margin: 0 auto;
 } 
 
 .card {
 	width: 200px;
 	height: 300px;
-	margin:0 20px;
 	background: #1e212d;
 	color: #ffcc29;
 	padding: 5px;
 	padding-left: 20px;
 	text-align: left;
+	margin: 20px 10px 0;
 }
 
 .card h2 {
@@ -115,7 +118,7 @@ input[type="submit"] {
 	display: none;
 }
 
-.removeContent {
+/*.removeContent {
 	display: none;
-}
+}*/ 
 
