--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,11 @@ hr {
 
 .container {
 	display: grid;
-	grid-template-columns: repeat(4, 245px);
+	grid-template-columns: repeat(4, 240px);
 	grid-gap: 10px 10px; 
 	padding-top: 2%; 
 	font-size: 20px;
-	justify-content: center; 
+	justify-content: center;
 } 
 
 .card {
@@ -43,6 +43,7 @@ hr {
 	padding-left: 20px;
 	text-align: left;
 	margin: 20px 10px 0;
+	font-size: 20px;
 }
 
 .card h2 {
@@ -125,13 +126,19 @@ input[type="submit"] {
 	margin: 15px 0;
 	background-color: inherit;
 	color: inherit;
-	border: none;
+	border: 1px solid #ffcc29;
 	font-size: 16px;
 	cursor: pointer;
+	outline: none;
+	padding: 5px 5px;
 }
 
 .removeBook {
 	color: tomato;
 }
 
- 
+.read {
+	color: green;
+	border: 1px solid green;
+	background: red;
+} 
