--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ input[type="submit"] {
 	background: red;
 } 
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1000px) {
   .container {
   	grid-template-columns: repeat(3, 200px);
   }
@@ -155,6 +155,10 @@ input[type="submit"] {
   .card h2 {
   	font-size: 20px;
   }
+
+  .inputForm {
+	width: 40%;
+	}
 }
 
 
@@ -169,5 +173,9 @@ input[type="submit"] {
 
   .card h2 {
   	font-size: 20px;
+  }
+
+  .inputForm {
+	width: 50%;
   }
 }
